{
  "version": 4,
  "terraform_version": "1.7.2",
  "serial": 32,
  "lineage": "7ff92fb8-d917-31b7-1137-8e90672fee3a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04378f040dbc0b8b5",
            "arn": "arn:aws:ec2:eu-west-1:924305315049:elastic-ip/eipalloc-04378f040dbc0b8b5",
            "association_id": "eipassoc-0e7d61d696b05301a",
            "domain": "vpc",
            "id": "eipalloc-04378f040dbc0b8b5",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0383eb31adb797c69",
            "private_dns": "ip-10-0-1-198.eu-west-1.compute.internal",
            "private_ip": "10.0.1.198",
            "public_dns": "ec2-108-128-91-160.eu-west-1.compute.amazonaws.com",
            "public_ip": "108.128.91.160",
            "public_ipv4_pool": "amazon",
            "region": "eu-west-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924305315049:internet-gateway/igw-022c9f161ce4b040a",
            "id": "igw-022c9f161ce4b040a",
            "owner_id": "924305315049",
            "region": "eu-west-1",
            "tags": {
              "Name": "KCIGW"
            },
            "tags_all": {
              "Name": "KCIGW"
            },
            "vpc_id": "vpc-089bf2b043154268e"
          },
          "dependencies": [
            "aws_vpc.kcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04378f040dbc0b8b5",
            "association_id": "eipassoc-0e7d61d696b05301a",
            "connectivity_type": "public",
            "id": "nat-022231da902abf60a",
            "network_interface_id": "eni-0383eb31adb797c69",
            "private_ip": "10.0.1.198",
            "public_ip": "108.128.91.160",
            "region": "eu-west-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0a8b4063a11c0b23a",
            "tags": {
              "Name": "KCNAT"
            },
            "tags_all": {
              "Name": "KCNAT"
            }
          },
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_subnet.public",
            "aws_vpc.kcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-095f6a9e3258c470b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-022231da902abf60a",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-095f6a9e3258c470b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat_eip",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.kcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-022c9f161ce4b040a",
            "id": "r-rtb-0b8ac2b79680afcd41080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "eu-west-1",
            "route_table_id": "rtb-0b8ac2b79680afcd4",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_vpc.kcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924305315049:route-table/rtb-095f6a9e3258c470b",
            "id": "rtb-095f6a9e3258c470b",
            "owner_id": "924305315049",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-022231da902abf60a",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PrivateRouteTable"
            },
            "tags_all": {
              "Name": "PrivateRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-089bf2b043154268e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924305315049:route-table/rtb-0b8ac2b79680afcd4",
            "id": "rtb-0b8ac2b79680afcd4",
            "owner_id": "924305315049",
            "propagating_vgws": [],
            "region": "eu-west-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022c9f161ce4b040a",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "PublicRouteTable"
            },
            "tags_all": {
              "Name": "PublicRouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-089bf2b043154268e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9e6051cb2a579ec",
            "region": "eu-west-1",
            "route_table_id": "rtb-095f6a9e3258c470b",
            "subnet_id": "subnet-02353d7afe4cfde08"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.kcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00eb5872f2cde472f",
            "region": "eu-west-1",
            "route_table_id": "rtb-0b8ac2b79680afcd4",
            "subnet_id": "subnet-0a8b4063a11c0b23a"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.kcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924305315049:security-group/sg-0dc0bdfe2ba535290",
            "description": "Allow DB + SSH from PublicSG",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dc0bdfe2ba535290",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-016c2b14dd8b5150e"
                ],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-016c2b14dd8b5150e"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "PrivateSG",
            "name_prefix": "",
            "owner_id": "924305315049",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-089bf2b043154268e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.public_sg",
            "aws_vpc.kcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924305315049:security-group/sg-016c2b14dd8b5150e",
            "description": "Allow web + SSH",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-016c2b14dd8b5150e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "PublicSG",
            "name_prefix": "",
            "owner_id": "924305315049",
            "region": "eu-west-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-089bf2b043154268e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.kcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924305315049:subnet/subnet-02353d7afe4cfde08",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02353d7afe4cfde08",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "924305315049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "PrivateSubnet"
            },
            "tags_all": {
              "Name": "PrivateSubnet"
            },
            "vpc_id": "vpc-089bf2b043154268e"
          },
          "dependencies": [
            "aws_vpc.kcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924305315049:subnet/subnet-0a8b4063a11c0b23a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a8b4063a11c0b23a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "924305315049",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-west-1",
            "tags": {
              "Name": "PublicSubnet"
            },
            "tags_all": {
              "Name": "PublicSubnet"
            },
            "vpc_id": "vpc-089bf2b043154268e"
          },
          "dependencies": [
            "aws_vpc.kcvpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "kcvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:924305315049:vpc/vpc-089bf2b043154268e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-072d43be5e0ee8845",
            "default_route_table_id": "rtb-067df558d489bd500",
            "default_security_group_id": "sg-0a202e4d9effc7643",
            "dhcp_options_id": "dopt-0def60c7602b76c90",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-089bf2b043154268e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-067df558d489bd500",
            "owner_id": "924305315049",
            "region": "eu-west-1",
            "tags": {
              "Name": "KCVPC"
            },
            "tags_all": {
              "Name": "KCVPC"
            }
          }
        }
      ]
    }
  ]
}